Fix: Contributors Page not responsive

--- a/client/src/components/contributorProfile/ContributorProfile.css
+++ b/client/src/components/contributorProfile/ContributorProfile.css
@@ -1,3 +1,19 @@
 .textWhite {
     color: white;
 }
+.spaceBanao {
+    
+    @media screen and (min-width: 768px){
+        display: flex;  
+        justify-content: space-evenly;
+    }
+    justify-content: space-evenly;
+}
+
+.firstBox{
+    margin-right: 2em;
+    @media screen and (max-width: 768px){
+        margin-right: 0;
+        margin-bottom: 0.5em;
+    }
+}
